# wall_e_demo

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  project.sh  resources.qrc
examples/: print.km2
examples/src/: main.km2  module.km2  nspace_test.km2  print.km2
installfiles/Modules/: CMakeDetermineKM2Compiler.cmake  CMakeKM2Compiler.cmake.in  CMakeKM2Information.cmake  CMakeTestKM2Compiler.cmake
installfiles/Modules/Compiler/: KM2C-KM2.cmake  KM2C.cmake
km2/: km2.cpp  km2.h
resources/: BackendList.qml  CodeArea.qml  ErrorsView.qml  ExecArea.qml  InfoArea.qml  InfoDialog.qml  LogTable.qml  ProjectView.qml  Tile.qml  ToolBarButton.qml  ToolBarChackBox.qml  main.qml
src/: cmp.cpp  cmp.h  exec_cmd.cpp  exec_cmd.h  main.cpp  to_pdf.cpp  to_pdf.h
src/cpp/: abstract_clang_node.cpp  buffered_reverse_range.cpp  buffered_reverse_range.h  clang_block_node.cpp  clang_block_node.h  clang_decl_arg_node.h  clang_function_node.h  clang_namespace_node.cpp  clang_type_node.cpp  cpp_base_node.cpp  cpp_base_node.h  cpp_consumer.cpp  cpp_consumer.h  cpp_parse_action.cpp  cpp_parse_action.h  cpp_parser.cpp  cpp_parser.h  cpp_visitor.cpp  tools.cpp
src/gui/: abstractthread.cpp  abstractthread.h  appcore.cpp  appcore.h  asmexecutor.cpp  backendfactory.cpp  backendfactory.h  compiler.cpp  compiler.h  concurentexecutor.cpp  concurentexecutor.h  either.cpp  either.h  highlighter.cpp  highlighter.h  jitexecutor.cpp  jitexecutor.h  kgramtreeview.cpp  kgramtreeview.h  mainwindow.cpp  mainwindow.h  presentor.cpp  presentor.h
src/gui/klibcore/: kdelegate.cpp  kdelegate.h  kdelegatechooser.cpp  kmacro.h
src/gui/log/: logtablemodel.cpp  logtablemodel.h
src/gui/presentation/: highlighter.cpp  highlighter.h  lspservice.cpp  lspservice.h  presentor.cpp  presentor.h  textedithover.cpp  textedithover.h  theme.cpp  theme.h
src/km2/: ast_token.cpp  ast_token.h  builder.cpp  builder.h  error.cpp  error.h  km2.cpp  km2.h  module.cpp  module.h
src/km2/backend/: as.h  backend.cpp  backend.h
src/km2/backend/entities/: argument.cpp  argument.h  block.h  function.h  printable.cpp  printable.h  type.h  value.h
src/km2/backend/models/: context.cpp  context.h  function_ref.cpp  function_ref.h  overload.cpp  overload.h  symbol.cpp  symbol.h
src/km2/backend/unit/: unit.cpp  unit.h
src/km2/backend/unit/capabilities/: abstract_capability.cpp  abstract_capability.h  constants_capability.cpp  constants_capability.h  namespace_capability.cpp  namespace_capability.h  type_capability.cpp  type_capability.h
src/km2/cpp/: abstract_clang_node.h  clang_block_node.h  clang_decl_arg_node.cpp  clang_decl_arg_node.h  clang_function_node.cpp  clang_function_node.h  clang_namespace_node.cpp  clang_namespace_node.h  clang_type_node.cpp  clang_type_node.h  cpp_consumer.cpp  cpp_consumer.h  cpp_parse_action.h  cpp_parser.h  cpp_visitor.h  tools.h
src/km2/interpreter_backend/: interpreter_backend.cpp  interpreter_backend.h
src/km2/interpreter_backend/entities/: argument.cpp  argument.h  block.cpp  block.h  constant.cpp  constant.h  function.cpp  function.h  type.cpp  type.h  value.cpp  value.h
src/km2/interpreter_backend/instructions/: call_instruction.cpp  call_instruction.h  dyn_value.cpp  dyn_value.h  execution_ctx.cpp  execution_ctx.h  instruction.cpp  instruction.h  math_instructions.cpp  math_instructions.h  size_t_ptr.h
src/km2/interpreter_backend/unit/: private.unit.h  unit.cpp  unit.h
src/km2/interpreter_backend/unit/capabilities/: abstract_capability.cpp  abstract_capability.h  constants_capability.cpp  constants_capability.h  namespace_capability.cpp  namespace_capability.h  type_capability.cpp  type_capability.h
src/km2/llvm_backend/: llvm_backend.cpp  llvm_backend.h
src/km2/llvm_backend/entities/: argument.cpp  argument.h  block.h  function.cpp  function.h  type.cpp  type.h  value.cpp  value.h
src/km2/llvm_backend/unit/: unit.cpp  unit.h
src/km2/llvm_backend/unit/capabilities/: abstract_capability.h  constants_capability.cpp  (+5 more)
src/km2/lsp/: service.cpp  service.h  tables.service.cpp
src/km2/module/: module.cpp  module.h  namespace_cap.cpp  namespace_cap.h
src/km2/translation_unit/: translation_unit.cpp  translation_unit.h
src/km2/translation_unit/capabilities/: abstract_capability.cpp  abstract_capability.h  constants_capability.cpp  constants_capability.h  namespace_capability.cpp  namespace_capability.h  type_capability.cpp  type_capability.h
src/km2/translation_unit/models/: context.cpp  context.h  function.cpp  function.h  overload.cpp  overload.h  symbol.cpp  symbol.h
src/km2/tree/: arg_node.cpp  arg_node.h  asm_node.cpp  asm_node.h  base_node.cpp  base_node.h  block_node.cpp  block_node.h  call_node.cpp  call_node.h  class_node.cpp  class_node.h  cmd_node.cpp  cmd_node.h  const_node.cpp  const_node.h  decl_arg_node.cpp  decl_arg_node.h  function_node.cpp  function_node.h  imp_node.cpp  imp_node.h  internal_block_node.cpp  internal_block_node.h  invocable_node.cpp  invocable_node.h  namespace_node.cpp  namespace_node.h  node.cpp  node.h  proto_node.cpp  proto_node.h  stmt_node.cpp  stmt_node.h  substitution_node.cpp  substitution_node.h  type_node.cpp  type_node.h
src/km2/tree/abstract/: abstract_func_node.cpp  abstract_func_node.h  abstract_node.cpp  abstract_node.h  abstract_type_node.cpp  abstract_type_node.h  abstract_value_node.cpp  abstract_value_node.h
src/km2/tree/traits/: callable_trait.cpp  callable_trait.h
src/km2/utility/: asm_tools.h  function.cpp  function.h  lvalue.cpp  lvalue.h  markup_string.cpp  markup_string.h  math_patterns.cpp  math_patterns.h
src/km2c/: main.cpp
src/km3/: km3.cpp  km3.h
src/lsp/: iofind.cpp  iofind.h  ioserver.cpp  ioserver.h  main.cpp
src/lsp/routes/: binding.gyp  package-lock.json  package.json
src/treegui/: appcore.cpp  appcore.h  asmexecutor.cpp  asmexecutor.h  highlighter.cpp  highlighter.h  kgramtreeview.cpp  kgramtreeview.h  mainwindow.cpp
src/treegui/klibcore/: kdelegate.h  kdelegatechooser.h  klibinfo.cpp  klibinfo.h  kmacro.h
tests/: km2_tests.cmake
tests/src/: jit_spec.cpp  jit_spec.h  main.cpp
